<resources>
    <string name="app_name">EShop</string>
    <string name="select_category">Select category</string>
    <string name="hot_sales">Hot sales</string>
    <string name="view_all">view all</string>
    <string name="see_more">see more</string>
    <string name="new_item">New</string>
    <string name="buy_now">Buy now!</string>
    <string name="search">Search</string>
    <string name="best_seller">Best Seller</string>
    <string name="shop_list">shop List</string>
    <string name="explorer">explorer</string>
    <string name="phones">Phones</string>
    <string name="computer">Computer</string>
    <string name="health">Health</string>
    <string name="books">Books</string>
    <string name="sport">Sport</string>
    <string name="furniture">Furniture</string>
    <string name="favorite">favorite</string>
    <string name="profile">profile</string>
    <string name="gomel_belarus">Gomel, Belarus</string>
    <string name="filter_options">Filter options</string>
    <string name="done">Done</string>
    <string name="brand">Brand</string>
    <string name="select_brand">Select brand</string>
    <string name="price">Price</string>
    <string name="select_price">Select price</string>
    <string name="select_size">Select size</string>
    <string name="size">Size</string>
    <string name="product_details">Product Details</string>
    <string name="shop">Shop</string>
    <string name="features">Features</string>
    <string name="details">Details</string>
    <string name="select_color_and_capacity">Select color and capacity</string>
    <string name="ecommerce_concept">Ecommerce Concept</string>
    <string name="add_address">Add address</string>
    <string name="my_cart">My cart</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="checkout">Checkout</string>
    <string name="plus">+</string>
    <string name="minus">−</string>
    <string-array name="brands">
        <item>Samsung</item>
        <item>Iphone</item>
        <item>Xiaomi</item>
        <item>Motorola</item>
       </string-array>
    <string-array name="price">
        <item>$0–100$</item>
        <item>$100–300$</item>
        <item>$300–500$</item>
        <item>$500–1000$</item>
        <item>$1000–2000$</item>
    </string-array>
    <string-array name="size">
        <item>3.5 to 4.5 inches</item>
        <item>4.5 to 5.5 inches</item>
        <item>5.5 inches and more</item>
    </string-array>
</resources>