<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_container"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_400">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/close"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_36"
                android:layout_margin="@dimen/dp_24"
                android:layout_weight="1"
                android:background="@drawable/rectangle_close"
                android:foreground="@drawable/ic_baseline_close_24" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_36"
                android:layout_gravity="center"
                android:layout_weight="5"
                android:fontFamily="@font/mark"
                android:gravity="center"
                android:text="@string/filter_options"
                android:textColor="@color/black_blue"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/done"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_36"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp_20"
                android:layout_weight="2"
                android:background="@drawable/rectangle_button"
                android:backgroundTint="@color/orange"
                android:fontFamily="@font/mark"
                android:gravity="center"
                android:text="@string/done"
                android:textColor="@color/white" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_8"
            android:fontFamily="@font/mark"
            android:text="@string/brand"
            android:textColor="@color/black_blue"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_24"
            android:gravity="center_vertical"
            android:hint="@string/select_brand">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_brand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_8"
            android:fontFamily="@font/mark"
            android:text="@string/price"
            android:textColor="@color/black_blue"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_24"
            android:gravity="center_vertical"
            android:hint="@string/select_price">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_8"
            android:fontFamily="@font/mark"
            android:text="@string/size"
            android:textColor="@color/black_blue"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_24"
            android:gravity="center_vertical"
            android:hint="@string/select_size">

            <AutoCompleteTextView
                android:id="@+id/auto_complete_size"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
