<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_36"
                android:layout_margin="@dimen/dp_24"
                android:layout_weight="0.75"
                android:background="@drawable/rectangle_close"
                android:foreground="@drawable/ic_baseline_arrow_back_ios_new_24"
                android:foregroundGravity="center"
                tools:ignore="UnusedAttribute"
                tools:targetApi="m" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_36"
                android:layout_gravity="center"
                android:layout_weight="5"
                android:fontFamily="@font/mark"
                android:gravity="end|center"
                android:text="@string/add_address"
                android:textColor="@color/black_blue"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/add_to_cart"
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_36"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp_20"
                android:layout_weight="0.75"
                android:background="@drawable/rectangle_button"
                android:backgroundTint="@color/orange"
                android:fontFamily="@font/mark"
                android:foreground="@drawable/ic_outline_location_white"
                android:foregroundGravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                tools:ignore="UnusedAttribute"
                tools:targetApi="m" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_40"
            android:layout_marginBottom="@dimen/dp_50"
            android:textStyle="bold"
            android:fontFamily="@font/mark"
            android:textSize="@dimen/sp_36"
            android:textColor="@color/black_blue"
            android:text="@string/my_cart"/>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:visibility="gone"
            android:padding="@dimen/default_padding_decoration"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="8dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black_blue"
            app:cardCornerRadius="@dimen/default_padding_decoration">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/dp_30"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_marginBottom="@dimen/default_padding_decoration"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="2"
                    android:layout_marginEnd="@dimen/dp_30"
                    tools:listitem="@layout/basket_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:paddingTop="@dimen/default_padding_decoration"
                    android:paddingBottom="@dimen/default_padding_decoration"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/bordered_background">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_12"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_56"
                            android:layout_weight="1"
                            android:fontFamily="@font/mark"
                            android:text="@string/total"
                            android:textSize="@dimen/sp_16"
                            android:textColor="@color/white"/>

                        <TextView
                            android:id="@+id/total_count"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:fontFamily="@font/mark"
                            tools:text="$6000 us"
                            android:textSize="@dimen/sp_16"
                            android:textColor="@color/white"/>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_56"
                            android:layout_weight="1"
                            android:fontFamily="@font/mark"
                            android:text="@string/delivery"
                            android:textSize="@dimen/sp_16"
                            android:textColor="@color/white"/>

                        <TextView
                            android:id="@+id/delivery"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:fontFamily="@font/mark"
                            tools:text="Free"
                            android:textSize="@dimen/sp_16"
                            android:textColor="@color/white"/>

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_marginTop="@dimen/dp_26"
                    android:layout_marginBottom="@dimen/dp_44"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_56"
                    android:text="@string/checkout"
                    android:textColor="@color/white"
                    android:fontFamily="@font/mark"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginHorizontal="@dimen/dp_44"
                    android:background="@drawable/rect_memory_orange"
                    android:textSize="@dimen/sp_20"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>



</androidx.core.widget.NestedScrollView>